--- a/Src/WholeNote.App/MainWindow.xaml
+++ b/Src/WholeNote.App/MainWindow.xaml
@@ -1,11 +1,16 @@
 ﻿<Window x:Class="WholeNote.App.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow"
+        Title="WholeNote"
         Height="347"
         Width="611"
+        ResizeMode="CanResizeWithGrip"
+        AllowsTransparency="True"
+        BorderThickness="3"
         Background="#222"
-        DataContext="{Binding Main, Source={StaticResource Locator}}">
+        WindowStyle="None" 
+        DataContext="{Binding Main, Source={StaticResource Locator}}" 
+        WindowStartupLocation="CenterScreen">
     
     <Window.Resources>
         <ResourceDictionary>
@@ -15,31 +20,58 @@
         </ResourceDictionary>
     </Window.Resources>
 
-    <DockPanel x:Name="LayoutRoot">
-        
-        <DockPanel DockPanel.Dock="Top">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" >
-                <Button Command="{Binding ExitCommand}" Content="X" />
-            </StackPanel>
+    <Border x:Name="LayoutRoot">
+        <Border.Effect>
+            <DropShadowEffect BlurRadius="5" Color="Black" Opacity="0.8" ShadowDepth="0.5" />
+        </Border.Effect>
+        <DockPanel>
+
+            <DockPanel DockPanel.Dock="Top">
+                <TextBlock FontSize="12" 
+                           Margin="5, 0, 0, 0"
+                           VerticalAlignment="Center"
+                           FontWeight="Bold"
+                           Foreground="#efefef" 
+                           Text="Whole Note" />
+                <StackPanel DockPanel.Dock="Right" 
+                            Orientation="Horizontal" 
+                            HorizontalAlignment="Right" >
+                    <Button Command="{Binding ExitCommand}" Content="X" 
+                            Name="btnSaveEditedText" 
+                            Background="Transparent" 
+                            Foreground="White" 
+                            FontSize="12" 
+                            FontWeight="Bold"
+                            Margin="2"
+                            BorderBrush="Transparent"
+                            BorderThickness="0">
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <Border BorderThickness="1" BorderBrush="#efefef" Padding="4,2">
+                                    <ContentPresenter Content="{TemplateBinding Content}"/>
+                                </Border>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
+                    
+                </StackPanel>
+            </DockPanel>
+
+            <DockPanel DockPanel.Dock="Bottom">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Margin="5, 2, 5, 2" Text="{Binding Status, UpdateSourceTrigger=PropertyChanged}" Foreground="#efefef" />
+                </StackPanel>
+            </DockPanel>
+
+            <TextBox Background="#222" 
+                    Text="{Binding TabContent, UpdateSourceTrigger=PropertyChanged}"
+                    AcceptsReturn="True"
+                    TextWrapping="Wrap" 
+                    Foreground="#efefef" 
+                    VerticalScrollBarVisibility="Auto"></TextBox>
+
+
         </DockPanel>
-        
-        <TabControl Background="#222">
-            <TabItem Header="Sample File" Foreground="White" Background="#222">
-                <TextBox Background="#222" 
-                         AcceptsReturn="True"
-                         TextWrapping="Wrap" 
-                         Foreground="#efefef" 
-                         VerticalScrollBarVisibility="Auto"></TextBox>
-            </TabItem>
-            <TabItem Header="Sample #2" Foreground="White" Background="#222">
-                <TextBox Background="#222" 
-                         AcceptsReturn="True"
-                         TextWrapping="Wrap" 
-                         Foreground="#efefef" 
-                         VerticalScrollBarVisibility="Auto"></TextBox>
-            </TabItem>
-        </TabControl>
-        
-    </DockPanel>
+    </Border>
     
 </Window>
